# zportal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cmake-single-platform.yml  e2e.yml  release.yml
app/: CMakeLists.txt  main.cpp
cmake/: install.cmake  sanitizers.cmake
include/zportal/: address.hpp  config.hpp  connection.hpp  ring.hpp  socket.hpp  tun.hpp  tunnel.hpp
include/zportal/iouring/: buffer_group.hpp  buffer_ring.hpp  cqe.hpp  cqe.inl  iouring.hpp  ring.hpp
include/zportal/net/: address.hpp  connection.hpp  resolve.hpp  socket.hpp  tun.hpp
include/zportal/session/: frame_header.hpp  frame_header.inl  operation.hpp  operation.inl  receiver.hpp  session.hpp  transmitter.hpp
include/zportal/session/frame/: header.hpp  header.inl
include/zportal/tools/: config.hpp  crc.hpp  debug.hpp  error.hpp  file_descriptor.hpp  monitor.hpp  probe.hpp  support_check.hpp  system.hpp  uring.hpp
include/zportal/tunnel/: frame_header.hpp  frame_header.inl  operation.hpp  operation.inl  peer.hpp  submission.hpp  submission.inl  tunnel.hpp  wire_header.hpp  wire_header.inl
include/zportal/tunnel/frame/: frame.hpp  frame.inl  header.hpp  header.inl  parser.hpp
src/: CMakeLists.txt  address.cpp  config.cpp  connection.cpp  crc.cpp  ring.cpp  socket.cpp  tun.cpp  tunnel.cpp
src/address/: address.cpp  cidr.cpp  parse.cpp
src/iouring/: CMakeLists.txt  buffer_group.cpp  buffer_ring.cpp  cqe.cpp  iouring.cpp  ring.cpp
src/net/: CMakeLists.txt  connection.cpp  resolve.cpp  ring.cpp  socket.cpp  tun.cpp
src/net/address/: CMakeLists.txt  address.cpp  cidr.cpp  parse.cpp
src/net/connection/: CMakeLists.txt  connect.cpp  listen.cpp  socks5.cpp
src/session/: CMakeLists.txt  receiver.cpp  session.cpp  transmitter.cpp
src/tools/: CMakeLists.txt  config.cpp  crc.cpp  error.cpp  file_descriptor.cpp  monitor.cpp  probe.cpp  support_check.cpp  system.cpp  uring.cpp
src/tunnel/: CMakeLists.txt  misc.cpp  submission.cpp  tunnel.cpp
src/tunnel/frame/: CMakeLists.txt  parser.cpp
tests/: CMakeLists.txt  address.cpp  connection.cpp  crc.cpp  file_descriptor.cpp  ring.cpp  socket.cpp
tests/e2e/: zportald_unix_netns.sh
tests/iouring/: ring_test.cpp
tests/net/: connection_test.cpp  socket_test.cpp
tests/net/address/: address_test.cpp
tests/tools/: crc_test.cpp  file_descriptor_test.cpp  probe_test.cpp  support_check_test.cpp
tests/tunnel/: frame_header_test.cpp  operation_test.cpp  wire_header_test.cpp
tests/tunnel/frame/: header_test.cpp  parser_test.cpp
