add_executable(zportald "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
target_link_libraries(zportald PRIVATE zportal)

target_compile_definitions(zportald PRIVATE
    ZPORTAL_VERSION="${PROJECT_VERSION}"
    ZPORTAL_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
    ZPORTAL_VERSION_MINOR=${PROJECT_VERSION_MINOR}
    ZPORTAL_VERSION_PATCH=${PROJECT_VERSION_PATCH}
    PROJECT_HOMEPAGE_URL="${PROJECT_HOMEPAGE_URL}"
    PROJECT_NAME="${PROJECT_NAME}"
)