set(SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/address.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/config.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/connection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/socket.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tun.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tunnel.cpp"
)

find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBURING REQUIRED IMPORTED_TARGET liburing)

add_library(zportal ${SOURCES})
target_include_directories(zportal PUBLIC
    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)
target_link_libraries(zportal PUBLIC PkgConfig::LIBURING)
target_compile_definitions(zportal PUBLIC
    ZPORTAL_VERSION="${PROJECT_VERSION}"
    ZPORTAL_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
    ZPORTAL_VERSION_MINOR=${PROJECT_VERSION_MINOR}
    ZPORTAL_VERSION_PATCH=${PROJECT_VERSION_PATCH}
    PROJECT_HOMEPAGE_URL="${PROJECT_HOMEPAGE_URL}"
    PROJECT_NAME="${PROJECT_NAME}"
)